--- a/README.textile
+++ b/README.textile
@@ -4,7 +4,7 @@ h2. Brief
 
 Wolf tags are very similar to HTML tags, or even XML tags. With _WolfTags Plugin_ plugin enabled, you can use some standard WolfTags and first of all easily create own WolfTags.
 
-_WolfTags Plugin_ will add the same functionality to Wolf CMS as offered by "Radius tags":http://wiki.github.com/radiant/radiant/radius-tags in Radinat CMS (but with a preceding 'w:' instead of 'r:').
+_WolfTags Plugin_ will add the same functionality to Wolf CMS as offered by "Radius tags":http://wiki.github.com/radiant/radiant/radius-tags in Radiant CMS (but with a preceding 'w:' instead of 'r:').
 
 WolfTags may be used in a Page, Snippet, or Layout.
 
