--- a/README.textile
+++ b/README.textile
@@ -2,9 +2,9 @@ h1. WolfTags Plugin Documentation
 
 h2. Brief
 
-Wolf tags are very similar to XHTML or XML tags. With _WolfTags Plugin_ plugin enabled, you can use some standard WolfTags and even create more of your own.
+Wolf tags are similar to XHTML or XML tags. With the _WolfTags Plugin_ enabled, you can use a set of standard WolfTags and even create more of your own.
 
-_WolfTags Plugin_ will add the a similar functionality to Wolf CMS as that offered by "Radius tags":http://wiki.github.com/radiant/radiant/radius-tags in Radiant CMS (but with a preceding 'w:' instead of 'r:').
+_WolfTags Plugin_ will add a similar functionality to Wolf CMS as that offered by "Radius tags":http://wiki.github.com/radiant/radiant/radius-tags in Radiant CMS (but with a preceding 'w:' instead of 'r:').
 
 WolfTags may be used in a Page, Snippet, or Layout. See the Sample Layout (included) for further examples of usage.
 
